сделал поиск места
